# deepshell

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  setup.py
deepshell/: __init__.py  cli.py  config.py  llm.py  persona.py  utils.py
deepshell/handlers/: base_handler.py  chat_handler.py  default_handler.py
