
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepshell"
version = "1.0.0"
description = "A command-line productivity tool powered by DeepSeek LLM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DeepShell Team", email = "team@deepshell.ai"}
]
keywords = ["ai", "cli", "shell", "deepseek", "llm", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=0.19.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/deepshell/deepshell"
Repository = "https://github.com/deepshell/deepshell"
Documentation = "https://deepshell.readthedocs.io"
"Bug Tracker" = "https://github.com/deepshell/deepshell/issues"

[project.scripts]
deepshell = "deepshell.cli:app"
ds = "deepshell.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepshell*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
