[project]
name = "deepshell"
version = "1.0.0"
description = "A command-line productivity tool powered by OpenAI LLM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DeepShell Team", email = "team@deepshell.ai"}
]
keywords = ["ai", "cli", "shell", "llm", "productivity"]
classifiers = [
    ...
]
requires-python = ">=3.8"
dependencies = [
    ...
]
