[project]
name = "deepshell"
version = "1.0.0"
description = "A command-line productivity tool powered by OpenAI LLM"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DeepShell Team", email = "muralipala1504@gmail.com"}
]
keywords = ["ai", "cli", "shell", "llm", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: System :: Shells",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "litellm>=1.0.0",
    "python-dotenv>=0.19.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0"
]
]
